--- a/meetings/templates/main_page.html
+++ b/meetings/templates/main_page.html
@@ -3,10 +3,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello world</title>
+    <title>Hello</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-<h1 class = 'title'> This is site for people who want to meet people</h1>
+    <div class = 'container'>
+        <div class = 'row'>
+            <div class = "col-lg-8 col-lg-offset-2">
+                <h1 class = 'title'> This is site for people who want to meet people</h1>
+                <!--<h2 class = 'title'> Please register or enter your login and password</h2>-->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
