--- a/meetings/static/style.css
+++ b/meetings/static/style.css
@@ -1,4 +1,25 @@
+html, body{
+    height: 100%;
+    max-height: 100%;
+    font-family: 'Roboto', sans-serif;
+    background-color: #edeef0;
+}
 .title{
 color: blue;
 text-align: center
+}
+.add-event-btn{
+    position: absolute;
+    bottom: 15px;
+    left: 50px;
+}
+.log_in_btn{
+    position: absolute;
+    bottom: 15px;
+    left: 50px;
+}
+.register-btn{
+    position: absolute;
+    bottom: 15px;
+    left: 50px;
 }
