--- a/meetings/templates/main_page.html
+++ b/meetings/templates/main_page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
+{% include 'navbar.html' %}
     <div class = 'container'>
         <div class = 'row'>
             <div class = "col-lg-8 col-lg-offset-2">
@@ -16,5 +17,7 @@
             </div>
         </div>
     </div>
+    {% block content %}
+    {% endblock content %}
 </body>
 </html>
